parte 1 de la practica 3 terminada